Changed cancel to reset

--- a/public/coursecreation.html
+++ b/public/coursecreation.html
@@ -177,7 +177,7 @@
                   <!--Submit and Cancel (reset form) Buttons-->
                   <div class="col-sm-offset-4 col-sm-8">
                      <button type="submit" class="btn btn-primary">Create Course</button>
-                     <input type="button" class="btn btn-danger" onclick="reset()" value="Cancel">
+                     <input type="button" class="btn btn-danger" onclick="reset()" value="Reset">
                   </div> 
                </fieldset>
             </form>      
